--- a/src/styles.module.pcss
+++ b/src/styles.module.pcss
@@ -1,18 +1,17 @@
 body {
   margin: 0;
-  padding: 0.75rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  padding: 0 0.75rem;
   height: 100vh;
-  background-color: #f0f0f0;
+  padding-top: 6.25rem;
 }
 
 .slider-container {
   position: relative;
-  width: 100%;
   max-width: 64rem;
-  height: 600px;
+  width: 100%;
+  margin: 0 auto;
+  max-height: 600px;
+  height: 100%;
   overflow: hidden;
   border-radius: 16px;
 }
@@ -24,7 +23,7 @@ body {
 
 .slide {
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   object-fit: cover;
   flex: 0 0 auto;
 }
@@ -33,18 +32,19 @@ body {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  bottom: 32px;
+  bottom: 5%;
   width: 94%;
   left: 3%;
 }
 
 .progress-bar-child {
-  height: 0.3125rem;
+  height: 4px;
   flex: 1;
   margin: 0 4px;
   background-color: #ffffff44;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
 }
 
 .progress-bar-child.active .progress-bar-fill {
@@ -53,7 +53,11 @@ body {
   width: 100%;
   position: absolute;
   left: 0;
-  animation: fillWidth 3s linear;
+  animation: fillWidth 5s linear;
+}
+
+.filled {
+  background-color: white;
 }
 
 @keyframes fillWidth {
@@ -62,5 +66,11 @@ body {
   }
   to {
     width: 100%;
+  }
+}
+
+@media screen and (max-width: 40rem) {
+  .progress-bar-child {
+    margin: 0 0.125rem;
   }
 }
